Make Ocean theme.

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,12 +18,12 @@ a {
 }
 
 h1 {
-  color: red;
+  color: crimson;
   text-align: center;
 }
 
 h2 {
-  color: red;
+  color: crimson;
   text-align: center;
 }
 
