Final Island theme.

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,16 +14,16 @@
 }
 
 a {
-  color: #6b02f5;
+  color: #261dcf;
 }
 
 h1 {
-  color: #6b02f5;
+  color: #261dcf;
   text-align: center;
 }
 
 h2 {
-  color: #6b02f5;
+  color: #261dcf;
   text-align: center;
 }
 
